fixed horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ a {
   text-align: center;
   width: 100%;
   height: 80vh;
-  padding: 2rem 2rem;
+  padding: 2rem 0rem;
 }
 
 .contact-section-header h2{
